--- a/index.ipynb
+++ b/index.ipynb
@@ -149,19 +149,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "fork_fig = {'categories': [{'alias': 'burgers', 'title': 'Burgers'},\n",
+    "  {'alias': 'sandwiches', 'title': 'Sandwiches'},\n",
+    "  {'alias': 'salad', 'title': 'Salad'}],\n",
+    " 'coordinates': {'latitude': 35.10871, 'longitude': -106.56739},\n",
+    " 'display_phone': '(505) 881-5293',\n",
+    " 'distance': 3571.724649307866,\n",
+    " 'id': 'fork-and-fig-albuquerque',\n",
+    " 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/_-DpXKfS3jv6DyA47g6Fxg/o.jpg',\n",
+    " 'is_closed': False,\n",
+    " 'location': {'address1': '6904 Menaul Blvd NE',\n",
+    "  'address2': 'Ste C',\n",
+    "  'address3': '',\n",
+    "  'city': 'Albuquerque',\n",
+    "  'country': 'US',\n",
+    "  'display_address': ['6904 Menaul Blvd NE', 'Ste C', 'Albuquerque, NM 87110'],\n",
+    "  'state': 'NM',\n",
+    "  'zip_code': '87110'},\n",
+    " 'name': 'Fork & Fig',\n",
+    " 'phone': '+15058815293',\n",
+    " 'price': '$$',\n",
+    " 'rating': 4.5,\n",
+    " 'review_count': 604,\n",
+    " 'transactions': [],\n",
+    " 'url': 'https://www.yelp.com/biz/fork-and-fig-albuquerque?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}\n",
+    "frontier_restaurant = {'categories': [{'alias': 'mexican', 'title': 'Mexican'},\n",
+    "  {'alias': 'diners', 'title': 'Diners'},\n",
+    "  {'alias': 'tradamerican', 'title': 'American (Traditional)'}],\n",
+    " 'coordinates': {'latitude': 35.0808088832532, 'longitude': -106.619402244687},\n",
+    " 'display_phone': '(505) 266-0550',\n",
+    " 'distance': 4033.6583235266075,\n",
+    " 'id': 'frontier-restaurant-albuquerque-2',\n",
+    " 'image_url': 'https://s3-media4.fl.yelpcdn.com/bphoto/M9L2z6-G0NobuDJ6YTh6VA/o.jpg',\n",
+    " 'is_closed': True,\n",
+    " 'location': {'address1': '2400 Central Ave SE',\n",
+    "  'address2': '',\n",
+    "  'address3': '',\n",
+    "  'city': 'Albuquerque',\n",
+    "  'country': 'US',\n",
+    "  'display_address': ['2400 Central Ave SE', 'Albuquerque, NM 87106'],\n",
+    "  'state': 'NM',\n",
+    "  'zip_code': '87106'},\n",
+    " 'name': 'Frontier Restaurant',\n",
+    " 'phone': '+15052660550',\n",
+    " 'price': '$',\n",
+    " 'rating': 4.0,\n",
+    " 'review_count': 1369,\n",
+    " 'transactions': [],\n",
+    " 'url': 'https://www.yelp.com/biz/frontier-restaurant-albuquerque-2?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}\n",
+    "\n",
+    "\n",
     "def better_restaurant(restaurant, alternative):\n",
-    "    pass"
+    "    if restaurant['rating'] > alternative['rating']:\n",
+    "        return restaurant\n",
+    "    return alternative\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fork & Fig\n",
+      "Fork & Fig\n"
+     ]
+    }
+   ],
    "source": [
     "print(better_restaurant(frontier_restaurant, fork_fig)['name']) # 'Fork & Fig'\n",
     "print(better_restaurant(fork_fig, frontier_restaurant)['name']) # 'Fork & Fig'"
@@ -176,19 +238,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    pass"
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
+    "        return restaurant\n",
+    "    return alternative"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontier Restaurant\n",
+      "Frontier Restaurant\n"
+     ]
+    }
+   ],
    "source": [
     "print(cheaper_restaurant(fork_fig, frontier_restaurant)['name']) # 'Frontier Restaurant'\n",
     "print(cheaper_restaurant(frontier_restaurant, fork_fig)['name']) # 'Frontier Restaurant'"
@@ -210,25 +283,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fork_fig['is_closed'] # False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "frontier_restaurant['is_closed'] # True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,28 +332,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "fork_fig = {'categories': [{'alias': 'burgers', 'title': 'Burgers'},\n",
+    "  {'alias': 'sandwiches', 'title': 'Sandwiches'},\n",
+    "  {'alias': 'salad', 'title': 'Salad'}],\n",
+    " 'coordinates': {'latitude': 35.10871, 'longitude': -106.56739},\n",
+    " 'display_phone': '(505) 881-5293',\n",
+    " 'distance': 3571.724649307866,\n",
+    " 'id': 'fork-and-fig-albuquerque',\n",
+    " 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/_-DpXKfS3jv6DyA47g6Fxg/o.jpg',\n",
+    " 'is_closed': False,\n",
+    " 'location': {'address1': '6904 Menaul Blvd NE',\n",
+    "  'address2': 'Ste C',\n",
+    "  'address3': '',\n",
+    "  'city': 'Albuquerque',\n",
+    "  'country': 'US',\n",
+    "  'display_address': ['6904 Menaul Blvd NE', 'Ste C', 'Albuquerque, NM 87110'],\n",
+    "  'state': 'NM',\n",
+    "  'zip_code': '87110'},\n",
+    " 'name': 'Fork & Fig',\n",
+    " 'phone': '+15058815293',\n",
+    " 'price': '$$',\n",
+    " 'rating': 4.5,\n",
+    " 'review_count': 604,\n",
+    " 'transactions': [],\n",
+    " 'url': 'https://www.yelp.com/biz/fork-and-fig-albuquerque?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}\n",
+    "frontier_restaurant = {'categories': [{'alias': 'mexican', 'title': 'Mexican'},\n",
+    "  {'alias': 'diners', 'title': 'Diners'},\n",
+    "  {'alias': 'tradamerican', 'title': 'American (Traditional)'}],\n",
+    " 'coordinates': {'latitude': 35.0808088832532, 'longitude': -106.619402244687},\n",
+    " 'display_phone': '(505) 266-0550',\n",
+    " 'distance': 4033.6583235266075,\n",
+    " 'id': 'frontier-restaurant-albuquerque-2',\n",
+    " 'image_url': 'https://s3-media4.fl.yelpcdn.com/bphoto/M9L2z6-G0NobuDJ6YTh6VA/o.jpg',\n",
+    " 'is_closed': True,\n",
+    " 'location': {'address1': '2400 Central Ave SE',\n",
+    "  'address2': '',\n",
+    "  'address3': '',\n",
+    "  'city': 'Albuquerque',\n",
+    "  'country': 'US',\n",
+    "  'display_address': ['2400 Central Ave SE', 'Albuquerque, NM 87106'],\n",
+    "  'state': 'NM',\n",
+    "  'zip_code': '87106'},\n",
+    " 'name': 'Frontier Restaurant',\n",
+    " 'phone': '+15052660550',\n",
+    " 'price': '$',\n",
+    " 'rating': 4.0,\n",
+    " 'review_count': 1369,\n",
+    " 'transactions': [],\n",
+    " 'url': 'https://www.yelp.com/biz/frontier-restaurant-albuquerque-2?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ'}\n",
+    "\n",
+    "\n",
     "def open_restaurants(restaurants):\n",
-    "    pass"
+    "    open =[]\n",
+    "    for restaurant in restaurants:\n",
+    "        if restaurant['is closed']:\n",
+    "            open.append(restaurant)\n",
+    "        return open\n",
+    "       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'is closed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-e78afc732a29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen_restaurants\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrestaurants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-9c87d4193dc5>\u001b[0m in \u001b[0;36mopen_restaurants\u001b[0;34m(restaurants)\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mopen\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrestaurant\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrestaurants\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mrestaurant\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'is closed'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m             \u001b[0mopen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrestaurant\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'is closed'"
+     ]
+    }
+   ],
    "source": [
     "len(open_restaurants(restaurants)) # 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'is closed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-bf5607d088f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mopen_restaurants\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrestaurants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# 'Fork & Fig'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-17-9168ba032d59>\u001b[0m in \u001b[0;36mopen_restaurants\u001b[0;34m(restaurants)\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mopen\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrestaurant\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrestaurants\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mrestaurant\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'is closed'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m             \u001b[0mopen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrestaurant\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'is closed'"
+     ]
+    }
+   ],
    "source": [
     "open_restaurants(restaurants)[0]['name'] # 'Fork & Fig'"
    ]
@@ -294,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
